--- a/index.html
+++ b/index.html
@@ -186,6 +186,95 @@
             </div>
           </div>
         </div>
+
+
+        <!-- Testimonial Section -->
+        <div class="test">
+
+            <!-- First Part -->
+            <div class="aboutus">
+                <h2>What Others Say About Us</h2>
+            </div>
+
+            <!-- Second Part -->
+            <div class="boxes">
+
+                    <!-- Box 1 -->
+                    <div class="promo1">
+                        <p class="para1">"StudySync revolutionized my classroom!
+                            Engaging content and teacher resources make learning
+                            enjoyable. Highly recommended for educators."
+                        </p>
+                        <img src="avatar1.png" alt="sarah-johnson">
+                        <p class="para2">Sarah Johnson</p>
+                        <p class="para3">8th Grade English Teacher</p>
+                    </div>
+
+
+                    <!-- Box 2 -->
+
+                    <div class="promo1">
+                        <p class="para1">"StudySync transformed our family's learning
+                            journey. Safe, interactive, and progress tracking features are
+                            invaluable for parents."
+                        </p>
+                        <img src="avatar2.png" alt="sarah-johnson">
+                        <p class="para2">Mark Davis</p>
+                        <p class="para3">Parent</p>
+                    </div>
+
+
+
+                    <!-- Box 3 -->
+                    <div class="promo1">
+                        <p class="para1">"StudySync, a true game-changer! Flexible content
+                            tailored assesments, and excellent support. Integral
+                            to our school district's success"
+                        </p>
+                        <img src="avatar3.png" alt="sarah-johnson">
+                        <p class="para2">Dr. James Carter</p>
+                        <p class="para3">School Administrator</p>
+                    </div>
+            </div>
+
+
+        </div>
+
+
+        <!-- News Section -->
+        <div class="news">
+
+
+            <div class="leftnews">
+                <img src="img.png" alt="img-png">
+            </div>
+
+
+            <div class="rightnews">
+                <div class="updates">
+                    <h1>Get the latest updates</h1>
+                </div>
+
+                <div class="signup">
+                    <p>Sign up for our newsletter</p>
+                </div>
+
+                <div class="email-send">
+                    <input type="text" placeholder="Email" class="email">
+                    <button class="send">Send</button>
+                </div>
+
+                <div class="terms">
+                    <p>By signing up to our newsletter you agree to our <a href="#">Terms of Services</a>
+                        and <a href="#">Privacy Policy</a>
+                    </p>
+                </div>
+            </div>
+
+
+
+
+        </div>
       </div>
     </div>
   </body>
