Refactor index.html structure and content

--- a/index.html
+++ b/index.html
@@ -93,9 +93,6 @@
             but is random or otherwise generated.
           </p>
         </div>
-
-        <!-- Card Section -->
-
         <div class="card-container">
           <!-- 1st card -->
 
@@ -112,9 +109,8 @@
             </div>
           </div>
 
-
           <!-- 2nd Card -->
-          <div class="card" style="background-color: rgb(204, 74, 96);">
+          <div class="card" style="background-color: rgb(204, 74, 96)">
             <div class="img">
               <img src="Affordability.svg" alt="" />
             </div>
@@ -127,9 +123,8 @@
             </div>
           </div>
 
-
           <!-- 3rd Card -->
-          <div class="card" style="background: rgb(209, 157, 3);">
+          <div class="card" style="background: rgb(209, 157, 3)">
             <div class="img">
               <img src="IndustryPatner.svg" alt="" />
             </div>
@@ -142,9 +137,8 @@
             </div>
           </div>
 
-
           <!-- 4th Card -->
-          <div class="card" style="background: rgba(33, 166, 139, 0.674);">
+          <div class="card" style="background: rgba(33, 166, 139, 0.674)">
             <div class="img">
               <img src="InnovativeTech.svg" alt="" />
             </div>
@@ -152,13 +146,13 @@
               <h3>Innovative Technology</h3>
             </div>
             <div class="p">
-              Utilize cutting-edge technology, such as augmented reality or virtual reality, to create immersive learning experience.
+              Utilize cutting-edge technology, such as augmented reality or
+              virtual reality, to create immersive learning experience.
             </div>
           </div>
 
-
           <!-- 5th Card -->
-          <div class="card" style="background: rgb(1, 148, 1);">
+          <div class="card" style="background: rgb(1, 148, 1)">
             <div class="img">
               <img src="PersonalizedLearn.svg" alt="" />
             </div>
@@ -166,13 +160,13 @@
               <h3>Responsive Support</h3>
             </div>
             <div class="p">
-              Proivde exceptional customer support and assistance to students and educators.
+              Proivde exceptional customer support and assistance to students
+              and educators.
             </div>
           </div>
 
-
           <!-- 6th Card -->
-          <div class="card" style="background-color: rgb(119, 0, 255);">
+          <div class="card" style="background-color: rgb(119, 0, 255)">
             <div class="img">
               <img src="PersonalizedLearn.svg" alt="" />
             </div>
@@ -180,100 +174,158 @@
               <h3>Analytics and Insights</h3>
             </div>
             <div class="p">
-              Offer detailed progress tracking and analytics to help
-              students and teachers monitor performance and make data-driven
-              decisions.
+              Offer detailed progress tracking and analytics to help students
+              and teachers monitor performance and make data-driven decisions.
+            </div>
+          </div>
+        </div>
+      </div>
+        <!-- Card Section -->
+
+        
+
+        <!-- Testimonial Section -->
+        <div class="test">
+          <!-- First Part -->
+          <div class="aboutus">
+            <h2>What Others Say About Us</h2>
+          </div>
+
+          <!-- Second Part -->
+          <div class="boxes">
+            <!-- Box 1 -->
+            <div class="promo1">
+              <p class="para1">
+                "StudySync revolutionized my classroom! Engaging content and
+                teacher resources make learning enjoyable. Highly recommended
+                for educators."
+              </p>
+              <img src="avatar1.png" alt="sarah-johnson" />
+              <p class="para2">Sarah Johnson</p>
+              <p class="para3">8th Grade English Teacher</p>
+            </div>
+
+            <!-- Box 2 -->
+
+            <div class="promo1">
+              <p class="para1">
+                "StudySync transformed our family's learning journey. Safe,
+                interactive, and progress tracking features are invaluable for
+                parents."
+              </p>
+              <img src="avatar2.png" alt="sarah-johnson" />
+              <p class="para2">Mark Davis</p>
+              <p class="para3">Parent</p>
+            </div>
+
+            <!-- Box 3 -->
+            <div class="promo1">
+              <p class="para1">
+                "StudySync, a true game-changer! Flexible content tailored
+                assesments, and excellent support. Integral to our school
+                district's success"
+              </p>
+              <img src="avatar3.png" alt="sarah-johnson" />
+              <p class="para2">Dr. James Carter</p>
+              <p class="para3">School Administrator</p>
             </div>
           </div>
         </div>
 
-
-        <!-- Testimonial Section -->
-        <div class="test">
-
-            <!-- First Part -->
-            <div class="aboutus">
-                <h2>What Others Say About Us</h2>
-            </div>
-
-            <!-- Second Part -->
-            <div class="boxes">
-
-                    <!-- Box 1 -->
-                    <div class="promo1">
-                        <p class="para1">"StudySync revolutionized my classroom!
-                            Engaging content and teacher resources make learning
-                            enjoyable. Highly recommended for educators."
-                        </p>
-                        <img src="avatar1.png" alt="sarah-johnson">
-                        <p class="para2">Sarah Johnson</p>
-                        <p class="para3">8th Grade English Teacher</p>
-                    </div>
-
-
-                    <!-- Box 2 -->
-
-                    <div class="promo1">
-                        <p class="para1">"StudySync transformed our family's learning
-                            journey. Safe, interactive, and progress tracking features are
-                            invaluable for parents."
-                        </p>
-                        <img src="avatar2.png" alt="sarah-johnson">
-                        <p class="para2">Mark Davis</p>
-                        <p class="para3">Parent</p>
-                    </div>
-
-
-
-                    <!-- Box 3 -->
-                    <div class="promo1">
-                        <p class="para1">"StudySync, a true game-changer! Flexible content
-                            tailored assesments, and excellent support. Integral
-                            to our school district's success"
-                        </p>
-                        <img src="avatar3.png" alt="sarah-johnson">
-                        <p class="para2">Dr. James Carter</p>
-                        <p class="para3">School Administrator</p>
-                    </div>
-            </div>
-
-
-        </div>
-
-
         <!-- News Section -->
         <div class="news">
+          <div class="leftnews">
+            <img src="img.png" alt="img-png" />
+          </div>
 
-
-            <div class="leftnews">
-                <img src="img.png" alt="img-png">
+          <div class="rightnews">
+            <div class="updates">
+              <h1>Get the latest updates</h1>
             </div>
 
-
-            <div class="rightnews">
-                <div class="updates">
-                    <h1>Get the latest updates</h1>
-                </div>
-
-                <div class="signup">
-                    <p>Sign up for our newsletter</p>
-                </div>
-
-                <div class="email-send">
-                    <input type="text" placeholder="Email" class="email">
-                    <button class="send">Send</button>
-                </div>
-
-                <div class="terms">
-                    <p>By signing up to our newsletter you agree to our <a href="#">Terms of Services</a>
-                        and <a href="#">Privacy Policy</a>
-                    </p>
-                </div>
+            <div class="signup">
+              <p>Sign up for our newsletter</p>
             </div>
 
+            <div class="email-send">
+              <input type="text" placeholder="Email" class="email" />
+              <button class="send">Send</button>
+            </div>
 
+            <div class="terms">
+              <p>
+                By signing up to our newsletter you agree to our
+                <a href="#">Terms of Services</a> and
+                <a href="#">Privacy Policy</a>
+              </p>
+            </div>
+          </div>
+        </div>
 
+        <!-- Footer Section -->
 
+        <div class="footer">
+          <!-- Left Part -->
+          <div class="lastleft">
+            <h4><img src="StudySyn.svg" alt="#logo" />StudySync</h4>
+            <p class="line">Seamless Learning for Brighter Futures.</p>
+            <div class="promos">
+              <img src="instagram.svg" alt="#instagram" />
+              <img src="twitter.svg" alt="#twitter" />
+              <img src="linkedin-copy.svg" alt="#linkedin" />
+              <img src="github.svg" alt="#github" />
+            </div>
+          </div>
+
+          <!-- Right Part -->
+          <div class="lastright">
+            <!-- Products -->
+
+            <div class="products">
+              <h4>Products</h4>
+              <p><a href="#">Overview</a></p>
+              <p><a href="#">Solutions</a></p>
+              <p><a href="#">Pricing</a></p>
+              <p><a href="#">Customers</a></p>
+            </div>
+
+            <!-- Company -->
+            <div class="products">
+              <h4>Company</h4>
+              <p><a href="#">About</a></p>
+              <p><a href="#">Invest Relations</a></p>
+              <p><a href="#">Jobs</a></p>
+              <p><a href="#">Press</a></p>
+              <p><a href="#">Blog</a></p>
+            </div>
+
+            <!-- Support -->
+
+            <div class="products">
+              <h4>Support</h4>
+              <p><a href="#">Contact</a></p>
+              <p><a href="#">Documentation</a></p>
+              <p><a href="#">Chat</a></p>
+              <p><a href="#">FAQ</a></p>
+            </div>
+
+            <!-- Legal -->
+
+            <div class="products">
+              <h4>Legal</h4>
+              <p><a href="#">Terms of Service</a></p>
+              <p><a href="#">Privacy Policy</a></p>
+              <p><a href="#">Cookie settings</a></p>
+            </div>
+          </div>
+        </div>
+
+        <!-- Last para -->
+
+        <div class="copy">
+          <p>&copy; 2026 - Project StudySync, made with <span>&hearts;</span> by Lakshya Vashishtha
+            2nd Year Student at JK Lakshmipat University. Practice Project of HTML and CSS.
+          </p>
         </div>
       </div>
     </div>
